--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "body-parser": "^1.19.0",
     "concat-stream": "^2.0.0",
     "cors": "^2.8.5",
+    "crc-32": "^1.2.0",
+    "crc32": "^0.2.2",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
