--- a/package.json
+++ b/package.json
@@ -13,13 +13,12 @@
     "body-parser": "^1.19.0",
     "concat-stream": "^2.0.0",
     "cors": "^2.8.5",
-    "crc-32": "^1.2.0",
-    "crc32": "^0.2.2",
     "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
     "fs": "0.0.1-security",
     "http": "0.0.0",
+    "js-crc": "^0.2.0",
     "mongodb": "^3.6.6",
     "sha256": "^0.2.0"
   }
